# specsmith-forge

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SKILL.md
.claude-plugin/: marketplace.json  plugin.json
agents/: researcher.md
cli/: LICENSE  README.md  pyproject.toml
cli/src/specsmith/: __init__.py  cli.py  display.py
cli/src/specsmith/ai/: client.py  forge.py  prompts.py
cli/src/specsmith/commands/: archive.py  complete.py  edit.py  forge.py  init.py  list_cmd.py  new.py  pause.py  resume.py  setup.py  status.py  switch.py
cli/src/specsmith/core/: active.py  parser.py  paths.py  registry.py  slugify.py  spec.py  template.py
cli/src/specsmith/setup_snippets/: codex.md  cursor.md
cli/tests/: test_commands.py  test_parser.py  test_registry.py  test_slugify.py
commands/: forge.md  list.md  pause.md  resume.md  status.md  switch.md
hooks/: hooks.json  session-start.sh
references/: spec-format.md  tool-setup.md
scripts/: init_specs.py  new_spec.py  spec_status.py
